--- a/classic-computer-vision-problems-with-pytorch/Classification_MNIST_With_Neural_Networks.ipynb
+++ b/classic-computer-vision-problems-with-pytorch/Classification_MNIST_With_Neural_Networks.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "This Notebook Created By [Moussa JAMOR](https://github.com/JamorMoussa/docs)\n",
     "\n",
-    "Github Repository: [Not Yet]()"
+    "Github Repository: [https://github.com/JamorMoussa/learn-ComputerVision/blob/main/Classification_MNIST_With_Neural_Networks.ipynb](https://github.com/JamorMoussa/learn-ComputerVision/blob/main/Classification_MNIST_With_Neural_Networks.ipynb)"
    ]
   },
   {
@@ -16,6 +16,22 @@
    "metadata": {},
    "source": [
     "# Classification MNIST using a MLP (Multiple Layer Perceptron)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "996e37d7-8766-417c-9ff5-5049d51f450c",
+   "metadata": {},
+   "source": [
+    "This notebook is classification MNSIT dataset, which stands for ***Modified National Institute of Standards and Technology***. By, building a sample **Multiple Layer Perceptron**, also called a feed-forward neural network. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b07a643a-b508-4798-abff-a6b95b93c7a2",
+   "metadata": {},
+   "source": [
+    "## Import Necessary Libraries"
    ]
   },
   {
@@ -39,6 +55,24 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.metrics import classification_report, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff123b6-86b2-4330-8e6b-ef50c5ff8cb6",
+   "metadata": {},
+   "source": [
+    "## MNIST Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aef001df-e2f2-4e82-b0aa-08d72d0d68fa",
+   "metadata": {},
+   "source": [
+    "The **MNIST** dataset of handwritten digits has a training set of 60,000 examples, and a test set of 10,000 examples. It's consist of 28px by 28px gray scall handwritten digits image (0-9).\n",
+    "\n",
+    "In this notebook, we'll split the dataset into train and test dataset. The train contains 50000 images, and the test dataset contains 10000 images."
    ]
   },
   {
@@ -534,12 +568,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77eb9fc1-6592-4db8-a816-4b461517bd09",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dbd5d4c0-3e2c-48da-ab66-c1ffa6d83f1e",
+   "execution_count": 117,
+   "id": "ebb625cc-7410-4ad2-b7e0-d26186c12ee1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "9c302a5d-a00f-46a5-ad74-023023958831",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98      4940\n",
+      "           1       0.98      0.97      0.98      5595\n",
+      "           2       0.95      0.96      0.96      4915\n",
+      "           3       0.98      0.89      0.93      5658\n",
+      "           4       0.95      0.96      0.96      4874\n",
+      "           5       0.94      0.94      0.94      4503\n",
+      "           6       0.97      0.99      0.98      4798\n",
+      "           7       0.98      0.96      0.97      5383\n",
+      "           8       0.88      0.98      0.93      4388\n",
+      "           9       0.94      0.95      0.94      4946\n",
+      "\n",
+      "    accuracy                           0.96     50000\n",
+      "   macro avg       0.96      0.96      0.96     50000\n",
+      "weighted avg       0.96      0.96      0.96     50000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train\n",
+    "with torch.inference_mode():\n",
+    "    train , label = next(iter(DataLoader(train_data, batch_size=50000, shuffle=True)))\n",
+    "    label_pred = torch.argmax(model(train), axis=1)\n",
+    "    print(classification_report(label_pred, label))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "ba23f48b-229d-4488-8642-ea9bcf056ce9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.97      0.97       997\n",
+      "           1       0.98      0.98      0.98      1197\n",
+      "           2       0.96      0.95      0.95      1034\n",
+      "           3       0.97      0.88      0.92      1110\n",
+      "           4       0.95      0.95      0.95       947\n",
+      "           5       0.94      0.94      0.94       908\n",
+      "           6       0.96      0.98      0.97      1004\n",
+      "           7       0.97      0.95      0.96      1027\n",
+      "           8       0.86      0.97      0.91       810\n",
+      "           9       0.92      0.94      0.93       966\n",
+      "\n",
+      "    accuracy                           0.95     10000\n",
+      "   macro avg       0.95      0.95      0.95     10000\n",
+      "weighted avg       0.95      0.95      0.95     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train\n",
+    "with torch.inference_mode():\n",
+    "    test , label = next(iter(DataLoader(test_data, batch_size=10000, shuffle=True)))\n",
+    "    label_pred = torch.argmax(model(test), axis=1)\n",
+    "    print(classification_report(label_pred, label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acc77ae-318e-4420-ae7d-cce3d54c1f40",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7eed37a-47a8-4071-a676-c97556bd55b1",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d799ada6-4c43-4434-a83d-8a6cd04a733a",
+   "metadata": {},
+   "source": [
+    "- Solving MNIST using PyTorch on [https://www.kaggle.com/code/geekysaint/solving-mnist-using-pytorch](https://www.kaggle.com/code/geekysaint/solving-mnist-using-pytorch)"
+   ]
   }
  ],
  "metadata": {
